--- a/metrics/docker-compose-metrics.yaml
+++ b/metrics/docker-compose-metrics.yaml
@@ -20,6 +20,20 @@ services:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
 
+  node-exporter:
+    image: prom/node-exporter:v1.9.0
+    container_name: lean-node-exporter
+    command:
+      - '--path.rootfs=/host'
+    pid: host
+    volumes:
+      - '/:/host:ro'
+    ports:
+      - "9100:9100"
+    networks:
+      - metrics-network
+    restart: unless-stopped
+
   grafana:
     image: grafana/grafana:11.4.0
     container_name: lean-grafana
