--- a/metrics/docker-compose-metrics.yaml
+++ b/metrics/docker-compose-metrics.yaml
@@ -27,7 +27,7 @@ services:
       - '--path.rootfs=/host'
     pid: host
     volumes:
-      - '/:/host:ro'
+      - '/:/host:${NODE_EXPORTER_MOUNT_OPTS:-ro,rslave}'
     ports:
       - "9100:9100"
     networks:
